--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "name": "fx-go",
-  "short_name": "fx-go",
+  "name": "FX-go",
+  "short_name": "FX-go",
+  "description": "Convert currencies on the go",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
@@ -16,5 +17,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "theme_color": "#D0021B"
 }
