--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "FX-go",
-  "short_name": "FX-go",
+  "name": "FX-GO",
+  "short_name": "FX-GO",
   "description": "Convert currencies on the go",
   "icons": [
     {
@@ -17,5 +17,5 @@
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#414141",
-  "theme_color": "#D0021B"
+  "theme_color": "#8F0112"
 }
