--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,7 +14,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": ".",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#8F0112",
     "theme_color": "#8F0112"
